removing unneeded files adding license updating comments updating readme updating plugin description